--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,14 @@
 configparser==3.5.0
 Django==1.11.5
+django-appconf==1.0.2
+django-compressor==2.2
 django-markdown-deux==1.0.5
+gunicorn==19.7.1
 markdown2==2.3.4
 mysqlclient==1.3.12
+olefile==0.44
+Pillow==4.3.0
 pkg-resources==0.0.0
 pytz==2017.2
+rcssmin==1.0.6
+rjsmin==1.0.12
